--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,25 @@
 :root {
   font-size: 16px;
 }
-.nav-cards {
+.wraper-cards {
   display: flex;
-  justify-content: center;
   align-items: center;
-  width: 100%;
+  justify-content: center;
   height: 100vh;
 }
-.nav-cards nav {
+.card {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  max-width: 280px;
+  min-width: 240px;
+  min-height: 300px;
+  border: 1px solid #ccc;
 }
-.nav-cards nav a {
-  font-size: 2rem;
-  text-decoration: none;
-  text-transform: uppercase;
+.card [class*='card']{
+  padding: 5px 25px;
+  text-align: center;
+}
+.footer-card {
+  margin-top: auto;
 }
